UI: implement ticket counter and fix css for panel-collapse

--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -20,11 +20,15 @@ h1, .h1, h2, .h2, h3, .h3 {
 .panel {
   border-radius: 3px;
 }
-
-.panel-heading a.collapsed .icon-up{
-  -webkit-transform: rotate(180deg);
-  -moz-transform: rotate(180deg);
-  transform: rotate(-180deg);
+.panel-default {
+  > .panel-heading{
+    background-color: transparent;
+  }
+  a.collapsed .icon-up{
+    -webkit-transform: rotate(180deg);
+    -moz-transform: rotate(180deg);
+    transform: rotate(-180deg);
+  }
 }
 
 .node-status {
@@ -183,7 +187,6 @@ h1, .h1, h2, .h2, h3, .h3 {
   box-shadow: none;
 }
 
-
 .btn-group.open .dropdown-toggle {
   box-shadow: none;
 }
@@ -193,6 +196,7 @@ h1, .h1, h2, .h2, h3, .h3 {
   background-color: $brand-green;
   border-color: $brand-green;
   font-weight: lighter;
+
   > .material-icons {
     vertical-align: sub;
   }
