--- a/src/assets/css/dashboard.scss
+++ b/src/assets/css/dashboard.scss
@@ -1,5 +1,3 @@
-
-
 .default-tabs {
   background: none;
   margin-top: 20px;
@@ -72,12 +70,16 @@
 
       a {
         padding: 0;
+        &:hover {
+          background: none;
+        }
 
         > .node-circle {
           width: 10px;
           height: 10px;
           margin-right: 10px;
         }
+
         > .material-icons {
           vertical-align: bottom;
           margin-right: 10px
@@ -90,7 +92,7 @@
 .tab-content {
   clear: both;
   border-top: 1px solid $border-color;
-  padding: 30px 0 20px 0;
+  padding: 30px 0 0 0;
 }
 
 .dashboard-container {
@@ -125,20 +127,36 @@
           &.cluster-ticket {
             border-right: 1px solid $border-color;
             padding-right: 15px;
-          }
 
-          span {
-              font-weight: 600;
+            span {
+              background: #a32a00;
+              font-size: 10px;
+              text-align: center;
+              position: absolute;
+              top: 0px;
+              right: -6px;
+              border-radius: 8px;
+              color: #fff;
+              width: 16px;
+              height: 16px;
             }
+            .ticket-dropdown {
+              padding: 15px 15px 10px 15px;
+              > li > div {
+                margin-bottom: 8px;
+              }
+            } 
+          }
 
           .filters-menu-btn {
             background-color: transparent;
-            padding: 0;
+            padding: 6px;
             
             > .filter-list { 
               vertical-align: sub;
             }
           }
+
           .filters-menu-dropdown {
             right: 0;
             left: auto;
@@ -167,18 +185,37 @@
       }
    }
 
-  .dashboard-table > tbody > tr > th {
-    padding: 16px 10px;
-    font-weight: 400;
-    border-top: none;
-  }
-  .dashboard-table > tbody > tr > td {
-    padding: 10px;
+  .dashboard-table {
+    margin-bottom: 0;
+    > thead > tr > th {
+      padding: 16px 10px;
+      font-weight: 400;
+      border-top: none;
+      text-align: center;
+      border-right: 1px solid $border-color;
+      &:last-child {
+        border-right: 0;
+      }
+    }
+
+    > tbody > tr > td {
+      padding: 10px;
+      border-right: 1px solid $border-color;
+      text-align: center;
+      &:last-child {
+        border-right: 0;
+      }
+
+      &.status-icon-col {
+       width: 40px;
+        border-right: 0;
+      }
+      &.resource-col {
+        text-align: left;
+      }
+    }
   }
 
-  .dashboard-table > tbody > tr > td.status-icon-col {
-    width: 40px;
-  }
 }
 
 .resource-status {
@@ -187,7 +224,6 @@
   display: inline-block;
   vertical-align: middle;
   margin-right: 5px;
-  float: left;
 }
 
 .status-icon {
